[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortexforge"
version = "0.1.0"
description = "RF generator dataset based on SLICES/CorteXlab"
authors = [
  { name = "Andrea Joly", email = "andrea.joly@inria.fr" }
]
requires-python = ">=3.10"
dependencies = [

]


[project.optional-dependencies]
planner = [
  "numpy==2.3.4",
  "pandas==2.3.3",
  "python-dateutil==2.9.0.post0",
  "pytz==2025.2",
  "PyYAML==6.0.3",
  "six==1.17.0",
  "tzdata==2025.2",
]
forge = [
  "sigmf==1.2.12"
]


[project.scripts]
cortexforge-planner = "cortexforge.planner.main:main"
cortexforge-forge   = "cortexforge.forge.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
